# BlockWorld

./: CMakeLists.txt  README.md
lib/ImGuiFileDialog-0.6.6.1/stb/: stb_image.h
lib/glew-2.1.0/: glew.pc
lib/glew-2.1.0/src/: visualinfo.c
lib/glfw-3.3.8/examples/: heightmap.c
lib/glfw-3.3.8/include/GLFW/: glfw3.h
lib/glfw-3.3.8/src/: cocoa_init.m  egl_context.c  linux_joystick.c  win32_joystick.c  win32_platform.h
lib/glfw-3.3.8/tests/: triangle-vulkan.c
lib/imgui-1.90/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_widgets.cpp
lib/imgui-1.90/backends/: imgui_impl_dx10.cpp  imgui_impl_dx11.cpp  imgui_impl_glfw.cpp  imgui_impl_sdl2.cpp  imgui_impl_sdl3.cpp  imgui_impl_vulkan.cpp  imgui_impl_wgpu.cpp  imgui_impl_win32.cpp
lib/imgui-1.90/examples/libs/glfw/include/GLFW/: glfw3.h
lib/imgui-1.90/examples/libs/usynergy/: uSynergy.h
lib/spdlog/example/: example.cpp
lib/spdlog/include/spdlog/details/: registry-inl.h  registry.h
lib/stbimage/: stb_image.h
res/shaders/: chunk.frag  chunk.vert  default.frag  default.vert  fshader.glsl  fshader_skybox.glsl  vshader.glsl  vshader_skybox.glsl
src/: main.cpp
src/Game/: BlockWorldGame.cpp  BlockWorldGame.h  Entity.cpp  Entity.h  Player.cpp  Player.h  TaskScheduler.cpp  TaskScheduler.h
src/Game/World/: Block.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  SubChunk.cpp  SubChunk.h  World.cpp  World.h
src/Game/World/Generator/: WorldGenerator.cpp  WorldGenerator.h
src/Input/: InputManager.cpp  InputManager.h
src/Renderer/: Camera.cpp  Camera.h  IRenderable.h  IShader.h  IWindow.h  Mesh.h  Model.h  RendererProvider.cpp  RendererProvider.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h
src/Renderer/Empty/: ERenderable.h  EShader.h  EWindow.cpp  EWindow.h
src/Renderer/OpenGL/: GLRenderable.cpp  GLRenderable.h  GLShader.cpp  GLShader.h  GLWindow.cpp  GLWindow.h  ShaderProgram.cpp  ShaderProgram.h
src/Resources/: OBJLoader.cpp  OBJLoader.h  ResourceManager.cpp  ResourceManager.h  ResourcePaths.h
src/UI/: GUI.cpp  GUI.h  ObjectChecker.cpp  ObjectChecker.h
